// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Inline> doesn't write falsy css callback 1`] = `<DocumentFragment />`;

exports[`<Inline> writes css 1`] = `
<DocumentFragment>
  <style>
    display:block;
  </style>
</DocumentFragment>
`;

exports[`<Inline> writes css callback 1`] = `
<DocumentFragment>
  <style>
    color:var(--color-primary);
  </style>
</DocumentFragment>
`;

exports[`<Inline> writes css object 1`] = `
<DocumentFragment>
  <style>
    display:block;
  </style>
</DocumentFragment>
`;

exports[`<Inline> writes css w/ nonce 1`] = `
<DocumentFragment>
  <style
    nonce="E8gagwlWEGlgwel"
  >
    display:block;
  </style>
</DocumentFragment>
`;

exports[`useGlobal() sets global styles with a function value: global 1`] = `
<style
  data-dash="-ui"
>
  
  body{background:var(--color-primary);}
</style>
`;

exports[`useGlobal() sets global styles with a function value: variables 1`] = `
<style
  data-dash="-ui"
>
  
  :root{--color-primary:#000;--color-secondary:#fff;}
</style>
`;

exports[`useGlobal() sets global styles with a string value: :root 1`] = `
<style
  data-dash="-ui"
>
  
  :root{--blue:#09a;}
</style>
`;

exports[`useStyle() creates a style and class 1`] = `"-ui-7y43y9"`;

exports[`useStyle() creates a style and class 2`] = `
<style
  data-dash="-ui"
>
  
  :root{--color-primary:#000;}
</style>
`;

exports[`useStyle() creates a style and class 3`] = `
<style
  data-dash="-ui"
>
  
  .-ui-7y43y9{color:var(--color-primary);}
</style>
`;

exports[`useStyles() creates styles and class 1`] = `"-ui-ga4wf1"`;

exports[`useStyles() creates styles and class 2`] = `
<style
  data-dash="-ui"
>
  
  :root{--color-primary:#000;--color-secondary:#fff;}
</style>
`;

exports[`useStyles() creates styles and class 3`] = `
<style
  data-dash="-ui"
>
  
  .-ui-ga4wf1{color:var(--color-primary);color:var(--color-secondary);}
</style>
`;

exports[`useThemes() adds variables then cleans up 1`] = `
<style
  data-dash="-ui"
>
  
  .-ui-dark-theme{--color-primary:#000;--color-secondary:#fff;}
</style>
`;

exports[`useThemes() adds variables then cleans up 2`] = `
<style
  data-dash="-ui"
>
  
  .-ui-light-theme{--color-primary:#fff;--color-secondary:#000;}
</style>
`;

exports[`useVariables() adds variables then cleans up: :root 1`] = `
<style
  data-dash="-ui"
>
  
  :root{--color-primary:#000;--color-secondary:#fff;}
</style>
`;
